fix some header styles that were misaligned

--- a/sass/01_atom/_a-ads.scss
+++ b/sass/01_atom/_a-ads.scss
@@ -66,7 +66,7 @@
 				overflow: hidden;
 				background: $color__minnpost-red url('assets/img/support.png') no-repeat 14px 10px;
 				margin: 0 0 1px 0;
-				padding: 13px 0 8px 0;
+				padding: 10px 0 8px 0;
 			}
 			ul, li {
 				margin: 0;
@@ -74,7 +74,7 @@
 				list-style: none;
 			}
 			li {
-				padding: 8px 14px;
+				padding: 9px 14px;
 				font-weight: bold;
 			}
 			a {
