--- a/sass/02_molecule/_m-forms.scss
+++ b/sass/02_molecule/_m-forms.scss
@@ -5,7 +5,7 @@
 	z-index: 1;
 	position: absolute;
 	top: 8px;
-	right: 8px;
+	//right: 8px;
 	input[type="text"], input[type="search"] {
 		height: 25px;
 		padding: 1px 2px 3px 2px;
