--- a/sass/02_molecule/_m-menus.scss
+++ b/sass/02_molecule/_m-menus.scss
@@ -19,7 +19,7 @@
 
 #minnpost-network {
 	display: none;
-	margin: 2px 30px 21px 0;
+	margin: 2px 30px 8px 0;
 	a {
 		@include hide-text;
 		width: 25px;
